--- a/src/app/modules/home/frontpage/frontpage.component.html
+++ b/src/app/modules/home/frontpage/frontpage.component.html
@@ -1,3 +1,17 @@
-<p>
-  frontpage works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
+      <app-filter-form></app-filter-form>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <app-top-cities></app-top-cities>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <app-map></app-map>
+    </div>
+  </div>
+</div>
