--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
 <router-outlet></router-outlet>
 <app-footer></app-footer>
 
+<button type="button" class="btn btn-warning" mdbRippleRadius>Warning</button>
+<button type="button" class="btn btn-unique">Unique</button>
