--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~mdbootstrap/css/bootstrap.css';
+@import '~mdbootstrap/css/mdb.min.css';
 // @import "scss/style";
