--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~ngx-toastr/toastr';
+@import '~ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+@import '~ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
 @import '~mdbootstrap/css/bootstrap.css';
 @import '~mdbootstrap/css/mdb.min.css';
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
 // @import "scss/style";
