--- a/src/app/modules/home/top-cities/top-cities.component.html
+++ b/src/app/modules/home/top-cities/top-cities.component.html
@@ -1,3 +1,27 @@
-<p>
-  top-cities works!
-</p>
+<owl-carousel-o [options]="customOptions">
+  <ng-template carouselSlide>
+      <div class="slide">
+          <img src="https://i.picsum.photos/id/905/400/300.jpg">
+      </div>
+  </ng-template>
+  <ng-template carouselSlide>
+      <div class="slide">
+          <img src="https://i.picsum.photos/id/507/400/300.jpg">
+      </div>
+  </ng-template>
+  <ng-template carouselSlide>
+      <div class="slide">
+          <img src="https://i.picsum.photos/id/609/400/300.jpg">
+      </div>
+  </ng-template>
+  <ng-template carouselSlide>
+      <div class="slide">
+          <img src="https://i.picsum.photos/id/995/400/300.jpg">
+      </div>
+  </ng-template>
+  <ng-template carouselSlide>
+      <div class="slide">
+          <img src="https://i.picsum.photos/id/1054/400/300.jpg">
+      </div>
+  </ng-template>
+</owl-carousel-o>
