--- a/src/app/modules/home/frontpage/frontpage.component.html
+++ b/src/app/modules/home/frontpage/frontpage.component.html
@@ -14,4 +14,9 @@
       <app-map></app-map>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-12">
+      <app-features></app-features>
+    </div>
+  </div>
 </div>
