--- a/src/app/modules/guide/pages/guide-home/guide-home.component.html
+++ b/src/app/modules/guide/pages/guide-home/guide-home.component.html
@@ -36,6 +36,8 @@
             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
               <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" [routerLink]="['dashboard']" routerLinkActive="active"  role="tab"
                 aria-controls="v-pills-home" aria-selected="true">DashBoard</a>
+              <a class="nav-link" id="v-pills-bookings-tab" data-toggle="pill" [routerLink]="['bookings']" routerLinkActive="active"  role="tab"
+                aria-controls="v-pills-bookings" aria-selected="true">Bookings</a>
               <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" [routerLink]="['messages']" routerLinkActive="active" role="tab"
                 aria-controls="v-pills-messages" aria-selected="false">Messages</a>
               <a class="nav-link" id="v-pills-activities-tab" data-toggle="pill" [routerLink]="['activities']" routerLinkActive="active" role="tab"
