--- a/src/app/modules/home/frontpage/frontpage.component.html
+++ b/src/app/modules/home/frontpage/frontpage.component.html
@@ -11,6 +11,11 @@
   </div>
   <div class="row">
     <div class="col-md-12">
+      <app-top-deals></app-top-deals>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
       <app-map></app-map>
     </div>
   </div>
