--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,6 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
 // @import "scss/style";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
