--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,30 +5,28 @@
 <button type="button" class="btn btn-outline-success waves-effect">Success</button>
 <div class="btn-group">
     <button type="button" class="btn btn-danger">Danger</button>
-    <button type="button" class="btn btn-danger dropdown-toggle px-3" data-toggle="dropdown" aria-haspopup="true"
-      aria-expanded="false">
+    <button type="button" class="btn btn-danger dropdown-toggle px-3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <span class="sr-only">Toggle Dropdown</span>
     </button>
     <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Action</a>
-      <a class="dropdown-item" href="#">Another action</a>
-      <a class="dropdown-item" href="#">Something else here</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">Separated link</a>
+        <a class="dropdown-item" href="#">Action</a>
+        <a class="dropdown-item" href="#">Another action</a>
+        <a class="dropdown-item" href="#">Something else here</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="#">Separated link</a>
     </div>
-  </div>
+</div>
 
-  <div class="dropdown" mdbDropdown>
+<div class="dropdown" mdbDropdown>
 
-    <a mdbDropdownToggle mdbBtn color="primary" class="dropdown-toggle waves-light" type="button"
-      mdbWavesEffect>
+    <a mdbDropdownToggle mdbBtn color="primary" class="dropdown-toggle waves-light" type="button" mdbWavesEffect>
       Dropdown primary
     </a>
-  
+
     <div class="dropdown-menu dropdown-primary">
-      <a class="dropdown-item" href="#">Action</a>
-      <a class="dropdown-item" href="#">Another action</a>
-      <a class="dropdown-item" href="#">Something else here</a>
-      <a class="dropdown-item" href="#">Something else here</a>
+        <a class="dropdown-item" href="#">Action</a>
+        <a class="dropdown-item" href="#">Another action</a>
+        <a class="dropdown-item" href="#">Something else here</a>
+        <a class="dropdown-item" href="#">Something else here</a>
     </div>
-  </div>
+</div>
