--- a/src/app/modules/tourists/components/favourites/favourites.component.html
+++ b/src/app/modules/tourists/components/favourites/favourites.component.html
@@ -171,3 +171,110 @@
 
   </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--Grid row-->
+<div class="row">
+
+  <!--Grid column-->
+  <div class="col-md-6">
+
+    <mdb-card class="testimonial-card">
+      <!--Bacground color-->
+      <div class="card-up indigo lighten-1">
+      </div>
+
+      <!--Avatar-->
+      <div class="avatar mx-auto">
+        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2810%29.jpg" class="rounded-circle">
+      </div>
+
+      <mdb-card-body>
+        <!--Name-->
+        <mdb-card-title>
+          <h4>Anna Doe</h4>
+        </mdb-card-title>
+        <hr>
+        <!--Quotation-->
+        <p>
+          <mdb-icon fas icon="quote-left"></mdb-icon> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos,
+          adipisci</p>
+      </mdb-card-body>
+    </mdb-card>
+
+  </div>
+  <!--Grid column-->
+
+  <!--Grid column-->
+  <div class="col-md-6">
+
+    <!--Card-->
+    <mdb-card class="testimonial-card">
+      <!--Bacground color-->
+      <div class="card-up aqua-gradient">
+      </div>
+
+      <!--Avatar-->
+      <div class="avatar mx-auto">
+        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2831%29.jpg" class="rounded-circle">
+      </div>
+
+      <mdb-card-body>
+        <!--Name-->
+        <mdb-card-title>
+          <h4>Martha Smith</h4>
+        </mdb-card-title>
+        <hr>
+        <!--Quotation-->
+        <p>
+          <mdb-icon fas icon="quote-left"></mdb-icon> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos,
+          adipisci</p>
+      </mdb-card-body>
+    </mdb-card>
+    <!--/.Card-->
+
+  </div>
+  <!--Grid column-->
+
+</div>
+<!--Grid row-->
