--- a/src/app/modules/guide/components/dashboard/dashboard.component.html
+++ b/src/app/modules/guide/components/dashboard/dashboard.component.html
@@ -1,118 +1,68 @@
 <div class="row">
   <div class="col-md-12">
-    <mdb-card class="w-100 mb-3">
+   
+    <!--Material textarea-->
+<div class="md-form md-outline">
+  <textarea type="text" id="form75" class="form-control md-textarea" rows="3" mdbInput></textarea>
+  <label for="form75">Post some Blog</label>
+  <button mdbBtn type="button" color="primary" rounded="true" mdbWavesEffect style="float: right;">Send &nbsp;<i class="far fa-paper-plane"></i></button>
+</div>
+  </div>
+</div>
+<div class="request">
+
+<!-- requests -->
+<div class="request-card">
+
+  <mdb-card class="w-50">
+  <div class="container1">
       <mdb-card-body>
-        <mdb-card-title>
-          <img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="img-fluid z-depth-1 rounded-circle" height= "50px" width= "50px"
-            alt="Responsive image"> &nbsp;
-            <b>Full Name</b>   
-        </mdb-card-title>
-        <hr>
+          <mdb-card-title>
+              <h4>Jaipur, Rajasthan</h4>
+          </mdb-card-title>
 
-        <!--Grid row-->
-  <div class="row">
+          <mdb-card-text>
+              <div>Tourist: <a href="#!">Arjun Gupta</a></div>
+              <div>Price: Rs.500/hour</div>
+              <div>Booking Date: March 25,2020</div>
+          </mdb-card-text>
 
-    <!--Grid column-->
-    <div class="col-md-3">
-      <!-- <mdb-icon fas icon="chart-area" size="3x" class="red-text"></mdb-icon> -->
-      <h5 class="font-weight-bold mt-3">Analytics</h5>
-      <p class="grey-text">Lorem ipsum dolor sit amet</p>
-    </div>
-    <!--Grid column-->
-
-    <!--Grid column-->
-    <div class="col-md-3">
-      <!-- <mdb-icon fas icon="book" size="3x" class="cyan-text"></mdb-icon> -->
-      <h5 class="font-weight-bold mt-3">Tutorials</h5>
-      <p class="grey-text">Lorem ipsum dolor sit amet</p>
-
-    </div>
-    <!--Grid column-->
-
-     <!--Grid column-->
-     <div class="col-md-3">
-      <!-- <mdb-icon fas icon="book" size="3x" class="cyan-text"></mdb-icon> -->
-      <h5 class="font-weight-bold mt-3">Tutorials</h5>
-      <p class="grey-text">Lorem ipsum dolor sit amet</p>
-
-    </div>
-    <!--Grid column-->
-
-    <!--Grid column-->
-    <div class="col-md-3">
-      <!-- <mdb-icon far icon="comments" size="3x" class="orange-text"></mdb-icon> -->
-      <h5 class="font-weight-bold mt-3">Support</h5>
-      <p class="grey-text">Lorem ipsum dolor sit amet</p>
-
-    </div>
-    <!--Grid column-->
-
-  </div>
-  <!--Grid row-->
-        <mdb-card-text>With supporting text below as a natural lead-in to additional content</mdb-card-text>
       </mdb-card-body>
-      <mdb-card-footer class="text-muted">View Details
-        <button class="float-right" mdbBtn color="primary">Go somewhere</button>
+      <img src="https://cdn6.dissolve.com/p/D18_44_025/D18_44_025_0004_600.jpg" class="float-right" alt="...">
+  </div>
+  <mdb-card-footer class="text-muted" style="height: 55px;">
+      <a href="#!">View more</a>
+      <button class="float-right footer-btn"  color="success" style="width: auto; margin: auto;" ng mdbBtn type="button" size="sm" mdbWavesEffect><b>ACCEPT</b></button> &nbsp;
+      <button class="float-right footer-btn"  color="danger" style="width: auto; margin: auto;" ng mdbBtn type="button" size="sm" mdbWavesEffect><b>REJECT</b></button>
+  </mdb-card-footer>
+</mdb-card>
+</div>
 
-      </mdb-card-footer>
-    </mdb-card>
+<!-- second -->
+<div class="request-card" >
 
-
-    <mdb-card class="w-100 mb-3">
+  <mdb-card class="w-50">
+  <div class="container1">
       <mdb-card-body>
-        <mdb-card-title>
-          <img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="img-fluid z-depth-1 rounded-circle" height= "50px" width= "50px"
-            alt="Responsive image"> &nbsp;
-            <b>Full Name</b>   
-        </mdb-card-title>
-        <hr>
+          <mdb-card-title>
+              <h4>Jaipur, Rajasthan</h4>
+          </mdb-card-title>
 
-        <!--Grid row-->
-  <div class="row">
+          <mdb-card-text>
+              <div>Tourist: <a href="#!">Arjun Gupta</a></div>
+              <div>Price: Rs.500/hour</div>
+              <div>Booking Date: March 25,2020</div>
+          </mdb-card-text>
 
-    <!--Grid column-->
-    <div class="col-md-3">
-      <!-- <mdb-icon fas icon="chart-area" size="3x" class="red-text"></mdb-icon> -->
-      <h5 class="font-weight-bold mt-3">Analytics</h5>
-      <p class="grey-text">Lorem ipsum dolor sit amet</p>
-    </div>
-    <!--Grid column-->
-
-    <!--Grid column-->
-    <div class="col-md-3">
-      <!-- <mdb-icon fas icon="book" size="3x" class="cyan-text"></mdb-icon> -->
-      <h5 class="font-weight-bold mt-3">Tutorials</h5>
-      <p class="grey-text">Lorem ipsum dolor sit amet</p>
-
-    </div>
-    <!--Grid column-->
-
-     <!--Grid column-->
-     <div class="col-md-3">
-      <!-- <mdb-icon fas icon="book" size="3x" class="cyan-text"></mdb-icon> -->
-      <h5 class="font-weight-bold mt-3">Tutorials</h5>
-      <p class="grey-text">Lorem ipsum dolor sit amet</p>
-
-    </div>
-    <!--Grid column-->
-
-    <!--Grid column-->
-    <div class="col-md-3">
-      <!-- <mdb-icon far icon="comments" size="3x" class="orange-text"></mdb-icon> -->
-      <h5 class="font-weight-bold mt-3">Support</h5>
-      <p class="grey-text">Lorem ipsum dolor sit amet</p>
-
-    </div>
-    <!--Grid column-->
-
-  </div>
-  <!--Grid row-->
-        <mdb-card-text>With supporting text below as a natural lead-in to additional content</mdb-card-text>
       </mdb-card-body>
-      <mdb-card-footer class="text-muted">View Details
-        <button class="float-right" mdbBtn color="primary">Go somewhere</button>
-
-      </mdb-card-footer>
-    </mdb-card>
+      <img src="https://cdn6.dissolve.com/p/D18_44_025/D18_44_025_0004_600.jpg" class="float-right" alt="...">
   </div>
+  <mdb-card-footer class="text-muted" style="height: 55px;">
+      <a href="#!">View more</a>
+      <button class="float-right footer-btn"  color="success" style="width: auto; margin: auto;" ng mdbBtn type="button" size="sm" mdbWavesEffect><b>ACCEPT</b></button> &nbsp;
+      <button class="float-right footer-btn"  color="danger" style="width: auto; margin: auto;" ng mdbBtn type="button" size="sm" mdbWavesEffect><b>REJECT</b></button>
+  </mdb-card-footer>
+</mdb-card>
+</div>
+
 </div>
