--- a/src/app/modules/guide/pages/guide-home/guide-home.component.html
+++ b/src/app/modules/guide/pages/guide-home/guide-home.component.html
@@ -1,20 +1,22 @@
 <div class="row" style="margin: 50px;">
   <div class="col-md-12">
-    <div class="card">
+    <!-- <div class="card">
       <div class="card-body">
         This is some text within a panel body.
       </div>
-    </div><br>
+    </div><br> -->
 
     <div class="row" >
-      <div class="col-md-4 col-sm-3">
+      <div class="col-md-3 col-sm-3">
         <div class="row">
           <div class="col-md-12 text-center">
               <img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="img-fluid z-depth-1 rounded-circle"
             alt="Responsive image">
             <br>
-
-            <div class="btn-group" mdbDropdown style="margin-top: 10px;">
+               <div class="guid-name">
+                 <b>Full Name</b>
+               </div>
+            <!-- <div class="btn-group" mdbDropdown style="margin-top: 10px;">
               <button mdbDropdownToggle type="button" mdbBtn color="default" outline="true" class="dropdown-toggle waves-light"
                 mdbWavesEffect>
                 <b>Name</b>
@@ -25,7 +27,7 @@
                 <a class="dropdown-item" >Manage</a>
                 <a class="dropdown-item" >Logout</a>
               </div>
-            </div>
+            </div> -->
             <br><br>
           </div>
         </div>
@@ -53,7 +55,7 @@
           </div>
       </div>
     </div>
-      <div class="col-md-8 col-sm-9">
+      <div class="col-md-9 col-sm-9">
         <router-outlet></router-outlet>
       </div>
     
