--- a/src/app/modules/guide/components/bookings/bookings.component.html
+++ b/src/app/modules/guide/components/bookings/bookings.component.html
@@ -26,10 +26,10 @@
 </div> -->
 
 <!--Table-->
-<table class="table table-hover table-fixed">
+<!-- <table class="table table-hover table-fixed"> -->
 
   <!--Table head-->
-  <thead>
+  <!-- <thead>
     <tr>
       <th>#</th>
       <th>Name</th>
@@ -39,11 +39,11 @@
       <th>Position</th>
       <th>Age</th>
     </tr>
-  </thead>
+  </thead> -->
   <!--Table head-->
 
   <!--Table body-->
-  <tbody>
+  <!-- <tbody>
     <tr>
       <th scope="row">4</th>
       <td>Jerry</td>
@@ -99,7 +99,26 @@
       <td>35</td>
     </tr>
   </tbody>
-  <!--Table body-->
+  
 
-</table>
-<!--Table-->
+</table> -->
+<mdb-card class="w-50">
+  <mdb-card-body>
+      <mdb-card-title>
+          <mdb-badge class="float-right amy-crisp-gradient" default="true">PERSONALISED TOUR</mdb-badge>
+          <h4>Jaipur, Rajasthan</h4>
+
+      </mdb-card-title>
+
+      <mdb-card-text>
+          <div>Guide: <a href="#!">Arjun Gupta</a></div>
+          <div>Price: Rs.500/hour</div>
+          <div>Booking Date: March 25,2020</div>
+      </mdb-card-text>
+
+  </mdb-card-body>
+  <mdb-card-footer class="text-muted" style="height: 55px;">
+      <a href="#!">View more</a>
+      <button class="float-right footer-btn" style="margin: auto; " color="info" ng mdbBtn type="button" size="sm" mdbWavesEffect><b>CONTACT TOURIST</b></button>
+  </mdb-card-footer>
+</mdb-card>
