--- a/src/app/modules/tourists/components/histories/histories.component.html
+++ b/src/app/modules/tourists/components/histories/histories.component.html
@@ -1,127 +1,237 @@
-<!-- Section: Blog v.3 -->
-<section class="my-5">
+<div class="row">
+    <div class="col-md-12">
+        <!-- Section: Blog v.1 -->
+        <section class="my-5">
 
-  <!-- Section heading -->
-  <h2 class="h1-responsive font-weight-bold text-center my-5">Recent posts</h2>
-  <!-- Section description -->
-  <p class="text-center dark-grey-text w-responsive mx-auto mb-5">Duis aute irure dolor in reprehenderit in
-    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <!-- Section heading -->
+            <!-- <h2 class="h1-responsive font-weight-bold text-center my-5">Recent posts</h2> -->
+            <!-- Section description -->
+            <!-- <p class="text-center w-responsive mx-auto mb-5">Duis aute irure dolor in reprehenderit in voluptate velit
+    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+    qui officia deserunt mollit anim id est laborum.</p> -->
 
-  <!-- Grid row -->
-  <div class="row">
+            <!-- Grid row -->
+            <div class="row">
 
-    <!-- Grid column -->
-    <div class="col-lg-5 col-xl-4">
+                <!-- Grid column -->
+                <div class="col-lg-4">
 
-      <!-- Featured image -->
-      <div class="view overlay rounded z-depth-1-half mb-lg-0 mb-4 waves-light" mdbWavesEffect>
-        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/49.jpg" alt="Sample image">
-        <a>
-          <div class="mask rgba-white-slight"></div>
-        </a>
-      </div>
+                    <!-- Featured image -->
+                    <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4 waves-light" mdbWavesEffect>
+                        <img class="img-fluid" src="https://www.makemytrip.com/travel-guide/media/dg_image/kovalam/thumb/Light%20House_19_85_kovalam_938_410.jpg" alt="Sample image">
+                        <a>
+                            <div class="mask rgba-white-slight"></div>
+                        </a>
+                    </div>
 
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-lg-8">
+
+                    <!-- Category -->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <a href="#!" style="color: #aeea00;">
+                                    <h6 class="font-weight-bold mb-3 ">
+                                        <mdb-icon fas icon="umbrella-beach"></mdb-icon> Coastal Serenity</h6>
+                                </a>
+                            </div>
+                            <div class="col-md-2">
+                                <span><mdb-badge class=" amy-crisp-gradient" default="true">PERSONALISED TOUR</mdb-badge></span>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Post title -->
+                    <h3 class="font-weight-bold mb-3"><strong>Kovalam, Kerala</strong></h3>
+                    <div class="container ">
+                        <div class="row fromto">
+                            <div class="col-md-3">
+                                FROM
+                            </div>
+                            <div class="col-md-3">
+                                TO
+                            </div>
+                            <div class="col-md-3">
+
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <h6>11 Aug'19</h6>
+                            </div>
+                            <div class="col-md-3">
+                                <h6>14 Aug'19</h6>
+                            </div>
+                            <div class="col-md-3">
+                                <i class="fas fa-user-friends"></i> Anika + 4
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <p>With Local <a><strong> Harsh Sharma</strong></a></p>
+                    <!-- Read more button -->
+                    <button mdbBtn type="button" style="color:white; background-color: #aeea00 !important;" mdbWavesEffect>VIEW MORE</button>
+
+                </div>
+                <!-- Grid column -->
+
+            </div>
+            <!-- Grid row -->
+
+            <hr class="my-5">
+
+            <!-- Grid row -->
+            <div class="row">
+
+                <!-- Grid column -->
+                <div class="col-lg-8">
+
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <a href="#!" style="color: #aeea00;">
+                                    <h6 class="font-weight-bold mb-3 ">
+                                        <mdb-icon fas icon="umbrella-beach"></mdb-icon> Coastal Serenity</h6>
+                                </a>
+                            </div>
+                            <div class="col-md-2">
+                                <span><mdb-badge class=" amy-crisp-gradient" default="true">PERSONALISED TOUR</mdb-badge></span>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Post title -->
+                    <h3 class="font-weight-bold mb-3"><strong>Kovalam, Kerala</strong></h3>
+                    <div class="container ">
+                        <div class="row fromto">
+                            <div class="col-md-3">
+                                FROM
+                            </div>
+                            <div class="col-md-3">
+                                TO
+                            </div>
+                            <div class="col-md-3">
+
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <h6>11 Aug'19</h6>
+                            </div>
+                            <div class="col-md-3">
+                                <h6>14 Aug'19</h6>
+                            </div>
+                            <div class="col-md-3">
+                                <i class="fas fa-user-friends"></i> Anika + 4
+                            </div>
+                        </div>
+
+                    </div>
+                    <p>With Local <a><strong> Harsh Sharma</strong></a></p>
+                    <!-- Read more button -->
+                    <button mdbBtn type="button" style="color:white; background-color: #aeea00 !important;" mdbWavesEffect>VIEW MORE</button>
+
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-lg-4">
+
+                    <!-- Featured image -->
+                    <div class="view overlay rounded z-depth-2 waves-light" mdbWavesEffect>
+                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/img%20(34).jpg" alt="Sample image">
+                        <a>
+                            <div class="mask rgba-white-slight"></div>
+                        </a>
+                    </div>
+
+                </div>
+                <!-- Grid column -->
+
+            </div>
+            <!-- Grid row -->
+
+            <hr class="my-5">
+
+            <!-- Grid row -->
+            <div class="row">
+
+                <!-- Grid column -->
+                <div class="col-lg-4">
+
+                    <!-- Featured image -->
+                    <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4 waves-light" mdbWavesEffect>
+                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/img (28).jpg" alt="Sample image">
+                        <a>
+                            <div class="mask rgba-white-slight"></div>
+                        </a>
+                    </div>
+
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-lg-8">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <a href="#!" style="color: #aeea00;">
+                                    <h6 class="font-weight-bold mb-3 ">
+                                        <mdb-icon fas icon="umbrella-beach"></mdb-icon> Coastal Serenity</h6>
+                                </a>
+                            </div>
+                            <div class="col-md-2">
+                                <span><mdb-badge class=" amy-crisp-gradient" default="true">PERSONALISED TOUR</mdb-badge></span>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Post title -->
+                    <h3 class="font-weight-bold mb-3"><strong>Kovalam, Kerala</strong></h3>
+                    <div class="container ">
+                        <div class="row fromto">
+                            <div class="col-md-3">
+                                FROM
+                            </div>
+                            <div class="col-md-3">
+                                TO
+                            </div>
+                            <div class="col-md-3">
+
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <h6>11 Aug'19</h6>
+                            </div>
+                            <div class="col-md-3">
+                                <h6>14 Aug'19</h6>
+                            </div>
+                            <div class="col-md-3">
+                                <i class="fas fa-user-friends"></i> Anika + 4
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <p>
+                        With Local <a><strong> Harsh Sharma</strong></a>
+                    </p>
+                    <!-- Read more button -->
+                    <button mdbBtn type="button" style="color:white; background-color: #aeea00 !important;" mdbWavesEffect>VIEW MORE</button>
+
+                </div>
+                <!-- Grid column -->
+
+            </div>
+            <!-- Grid row -->
+
+        </section>
+        <!-- Section: Blog v.1 -->
     </div>
-    <!-- Grid column -->
-
-    <!-- Grid column -->
-    <div class="col-lg-7 col-xl-8">
-
-      <!-- Post title -->
-      <h3 class="font-weight-bold mb-3"><strong>Title of the news</strong></h3>
-      <!-- Excerpt -->
-      <p class="dark-grey-text">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit
-        quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus
-        et aut officiis debitis cum soluta nobis est eligendi placeat facere aut rerum.</p>
-      <!-- Post data -->
-      <p>by <a class="font-weight-bold">Jessica Clark</a>, 19/04/2018</p>
-      <!-- Read more button -->
-      <a mdbBtn color="primary" mdbWavesEffect>Read more</a>
-
-    </div>
-    <!-- Grid column -->
-
-  </div>
-  <!-- Grid row -->
-
-  <hr class="my-5">
-
-  <!-- Grid row -->
-  <div class="row">
-
-    <!-- Grid column -->
-    <div class="col-lg-5 col-xl-4">
-
-      <!-- Featured image -->
-      <div class="view overlay rounded z-depth-1-half mb-lg-0 mb-4 waves-light" mdbWavesEffect>
-        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/31.jpg" alt="Sample image">
-        <a>
-          <div class="mask rgba-white-slight"></div>
-        </a>
-      </div>
-
-    </div>
-    <!-- Grid column -->
-
-    <!-- Grid column -->
-    <div class="col-lg-7 col-xl-8">
-
-      <!-- Post title -->
-      <h3 class="font-weight-bold mb-3"><strong>Title of the news</strong></h3>
-      <!-- Excerpt -->
-      <p class="dark-grey-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-        praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati
-        cupiditate non provident et accusamus iusto odio dignissimos et dolorum fuga.</p>
-      <!-- Post data -->
-      <p>by <a class="font-weight-bold">Jessica Clark</a>, 16/04/2018</p>
-      <!-- Read more button -->
-      <a mdbBtn color="primary" mdbWavesEffect>Read more</a>
-
-    </div>
-    <!-- Grid column -->
-
-  </div>
-  <!-- Grid row -->
-
-  <hr class="my-5">
-
-  <!-- Grid row -->
-  <div class="row">
-
-    <!-- Grid column -->
-    <div class="col-lg-5 col-xl-4">
-
-      <!-- Featured image -->
-      <div class="view overlay rounded z-depth-1-half mb-lg-0 mb-4 waves-light" mdbWavesEffect>
-        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/52.jpg" alt="Sample image">
-        <a>
-          <div class="mask rgba-white-slight"></div>
-        </a>
-      </div>
-
-    </div>
-    <!-- Grid column -->
-
-    <!-- Grid column -->
-    <div class="col-lg-7 col-xl-8">
-
-      <!-- Post title -->
-      <h3 class="font-weight-bold mb-3"><strong>Title of the news</strong></h3>
-      <!-- Excerpt -->
-      <p class="dark-grey-text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed
-        quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
-        qui dolorem ipsum quia dolor sit amet, psam voluptatem quia consectetur.</p>
-      <!-- Post data -->
-      <p>by <a class="font-weight-bold">Jessica Clark</a>, 12/04/2018</p>
-      <!-- Read more button -->
-      <a mdbBtn color="primary" mdbWavesEffect>Read more</a>
-
-    </div>
-    <!-- Grid column -->
-
-  </div>
-  <!-- Grid row -->
-
-</section>
-<!-- Section: Blog v.3 -->
+</div>
