--- a/src/app/modules/home/top-deals/top-deals.component.html
+++ b/src/app/modules/home/top-deals/top-deals.component.html
@@ -1,101 +1,105 @@
 <div class="row">
-  <div class="col-md-2">
-    <!-- Card -->
-    <mdb-card>
-      <mdb-card-body>
-        <mdb-card-title>
-          <h4>Panel title</h4>
-        </mdb-card-title>
-        <mdb-card-text>Some quick example text to build on the card title and make up the bulk of the card's
-          content.</mdb-card-text>
-        <div class="flex-row">
-          <a class="card-link">Card link</a>
-          <a class="card-link">Another link</a>
-        </div>
-      </mdb-card-body>
-    </mdb-card>
-  </div>
+    <div class="col-md-2">
+        <!-- Card -->
+        <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
+            <mdb-card-body class="mask waves-effect waves-light rgba-blue-light">
+                <div class="white-text">
+                    <mdb-card-title>
+                        <h4>Jaipur, Rajasthan</h4>
+                    </mdb-card-title>
+                    <mdb-card-text class="white-text">Offer By Guide: <a class="white-text" href="#!">Arjun Gupta</a>
+                        <div>Explore the cultural delight in <b>3 days and 2 nights</b></div>
+                    </mdb-card-text>
+                    <div class="flex-row">
+                        <a class="card-link">Card link <span><i class="far fa-heart"></i></span> </a>
+                        <a class="card-link">View More</a>
+                    </div>
+                </div>
 
-  <div class="col-md-2">
-    <!-- Card -->
-    <mdb-card>
-      <mdb-card-body>
-        <mdb-card-title>
-          <h4>Panel title</h4>
-        </mdb-card-title>
-        <mdb-card-text>Some quick example text to build on the card title and make up the bulk of the card's
-          content.</mdb-card-text>
-        <div class="flex-row">
-          <a class="card-link">Card link</a>
-          <a class="card-link">Another link</a>
-        </div>
-      </mdb-card-body>
-    </mdb-card>
-  </div>
+            </mdb-card-body>
+        </mdb-card>
+    </div>
 
-  <div class="col-md-2">
-    <!-- Card -->
-    <mdb-card>
-      <mdb-card-body>
-        <mdb-card-title>
-          <h4>Panel title</h4>
-        </mdb-card-title>
-        <mdb-card-text>Some quick example text to build on the card title and make up the bulk of the card's
-          content.</mdb-card-text>
-        <div class="flex-row">
-          <a class="card-link">Card link</a>
-          <a class="card-link">Another link</a>
-        </div>
-      </mdb-card-body>
-    </mdb-card>
-  </div>
+    <div class="col-md-2">
+        <!-- Card -->
+        <mdb-card>
+            <mdb-card-body>
+                <mdb-card-title>
+                    <h4>Panel title</h4>
+                </mdb-card-title>
+                <mdb-card-text>Some quick example text to build on the card title and make up the bulk of the card's content.
+                </mdb-card-text>
+                <div class="flex-row">
+                    <a class="card-link">Card link</a>
+                    <a class="card-link">Another link</a>
+                </div>
+            </mdb-card-body>
+        </mdb-card>
+    </div>
 
-  <div class="col-md-2">
-    <!-- Card -->
-    <mdb-card>
-      <mdb-card-body>
-        <mdb-card-title>
-          <h4>Panel title</h4>
-        </mdb-card-title>
-        <mdb-card-text>Some quick example text to build on the card title and make up the bulk of the card's
-          content.</mdb-card-text>
-        <div class="flex-row">
-          <a class="card-link">Card link</a>
-          <a class="card-link">Another link</a>
-        </div>
-      </mdb-card-body>
-    </mdb-card>
-  </div>
-  <div class="col-md-2">
-    <!-- Card -->
-    <mdb-card>
-      <mdb-card-body>
-        <mdb-card-title>
-          <h4>Panel title</h4>
-        </mdb-card-title>
-        <mdb-card-text>Some quick example text to build on the card title and make up the bulk of the card's
-          content.</mdb-card-text>
-        <div class="flex-row">
-          <a class="card-link">Card link</a>
-          <a class="card-link">Another link</a>
-        </div>
-      </mdb-card-body>
-    </mdb-card>
-  </div>
-  <div class="col-md-2">
-    <!-- Card -->
-    <mdb-card>
-      <mdb-card-body>
-        <mdb-card-title>
-          <h4>Panel title</h4>
-        </mdb-card-title>
-        <mdb-card-text>Some quick example text to build on the card title and make up the bulk of the card's
-          content.</mdb-card-text>
-        <div class="flex-row">
-          <a class="card-link">Card link</a>
-          <a class="card-link">Another link</a>
-        </div>
-      </mdb-card-body>
-    </mdb-card>
-  </div>
+    <div class="col-md-2">
+        <!-- Card -->
+        <mdb-card>
+            <mdb-card-body>
+                <mdb-card-title>
+                    <h4>Panel title</h4>
+                </mdb-card-title>
+                <mdb-card-text>Some quick example text to build on the card title and make up the bulk of the card's content.
+                </mdb-card-text>
+                <div class="flex-row">
+                    <a class="card-link">Card link</a>
+                    <a class="card-link">Another link</a>
+                </div>
+            </mdb-card-body>
+        </mdb-card>
+    </div>
+
+    <div class="col-md-2">
+        <!-- Card -->
+        <mdb-card>
+            <mdb-card-body>
+                <mdb-card-title>
+                    <h4>Panel title</h4>
+                </mdb-card-title>
+                <mdb-card-text>Some quick example text to build on the card title and make up the bulk of the card's content.
+                </mdb-card-text>
+                <div class="flex-row">
+                    <a class="card-link">Card link</a>
+                    <a class="card-link">Another link</a>
+                </div>
+            </mdb-card-body>
+        </mdb-card>
+    </div>
+    <div class="col-md-2">
+        <!-- Card -->
+        <mdb-card>
+            <mdb-card-body>
+                <mdb-card-title>
+                    <h4>Panel title</h4>
+                </mdb-card-title>
+                <mdb-card-text>Some quick example text to build on the card title and make up the bulk of the card's content.
+                </mdb-card-text>
+                <div class="flex-row">
+                    <a class="card-link">Card link</a>
+                    <a class="card-link">Another link</a>
+                </div>
+            </mdb-card-body>
+        </mdb-card>
+    </div>
+    <div class="col-md-2">
+        <!-- Card -->
+        <mdb-card>
+            <mdb-card-body>
+                <mdb-card-title>
+                    <h4>Panel title</h4>
+                </mdb-card-title>
+                <mdb-card-text>Some quick example text to build on the card title and make up the bulk of the card's content.
+                </mdb-card-text>
+                <div class="flex-row">
+                    <a class="card-link">Card link</a>
+                    <a class="card-link">Another link</a>
+                </div>
+            </mdb-card-body>
+        </mdb-card>
+    </div>
 </div>
