--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -73,11 +73,11 @@
         <ul class="nav nav-tabs md-tabs tabs-2 light-blue darken-3" role="tablist">
           <li class="nav-item">
             <a class="nav-link active" data-toggle="tab" href="#panel7" role="tab"><i class="fas fa-user mr-1"></i>
-              Login</a>
+              Tourists</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" data-toggle="tab" href="#panel8" role="tab"><i class="fas fa-user-plus mr-1"></i>
-              Register</a>
+              Guide</a>
           </li>
         </ul>
 
@@ -91,17 +91,17 @@
               <div class="modal-body mb-1">
                 <div class="md-form form-sm mb-5">
                   <i class="fas fa-envelope prefix"></i>
-                  <input type="email" id="modalLRInput10" formControlName="email" class="form-control form-control-sm validate">
-                  <label data-error="wrong" data-success="right" for="modalLRInput10">Your email</label>
+                  <input mdbInput  name="input" type="email" formControlName="email" id="form10" class="form-control">
+                  <label for="form10">Email</label>
                 </div>
   
                 <div class="md-form form-sm mb-4">
                   <i class="fas fa-lock prefix"></i>
-                  <input type="password" id="modalLRInput11" formControlName="password" class="form-control form-control-sm validate">
-                  <label data-error="wrong" data-success="right" for="modalLRInput11">Your password</label>
+                  <input mdbInput  name="input" type="password" formControlName="password" id="form11" class="form-control">
+                  <label for="form11">Password</label>
                 </div>
                 <div class="text-center mt-2">
-                  <button type="submit" (click)="submitLogin()" class="btn btn-info">Log in <i class="fas fa-sign-in ml-1"></i></button>
+                  <button type="submit" (click)="submitLogin('tourists')" class="btn btn-info">Log in <i class="fas fa-sign-in ml-1"></i></button>
                 </div>
               </div>
             </form>
@@ -121,37 +121,34 @@
           <div class="tab-pane fade" id="panel8" role="tabpanel">
 
             <!--Body-->
-            <div class="modal-body">
-              <div class="md-form form-sm mb-5">
-                <i class="fas fa-envelope prefix"></i>
-                <input type="email" id="modalLRInput12" class="form-control form-control-sm validate">
-                <label data-error="wrong" data-success="right" for="modalLRInput12">Your email</label>
+            <form [formGroup]="loginForm" >
+              <div class="modal-body mb-1">
+                <div class="md-form form-sm mb-5">
+                  <i class="fas fa-envelope prefix"></i>
+                  <input mdbInput  name="input" type="email" formControlName="email" id="form20" class="form-control">
+                  <label for="form20">Email</label>
+                </div>
+  
+                <div class="md-form form-sm mb-4">
+                  <i class="fas fa-lock prefix"></i>
+                  <input mdbInput  name="input" type="password" formControlName="password" id="form21" class="form-control">
+                  <label for="form21">Password</label>
+                </div>
+                <div class="text-center mt-2">
+                  <button type="submit" (click)="submitLogin('guide')" class="btn btn-info">Log in <i class="fas fa-sign-in ml-1"></i></button>
+                </div>
               </div>
-
-              <div class="md-form form-sm mb-5">
-                <i class="fas fa-lock prefix"></i>
-                <input type="password" id="modalLRInput13" class="form-control form-control-sm validate">
-                <label data-error="wrong" data-success="right" for="modalLRInput13">Your password</label>
-              </div>
-
-              <div class="md-form form-sm mb-4">
-                <i class="fas fa-lock prefix"></i>
-                <input type="password" id="modalLRInput14" class="form-control form-control-sm validate">
-                <label data-error="wrong" data-success="right" for="modalLRInput14">Repeat password</label>
-              </div>
-
-              <div class="text-center form-sm mt-2">
-                <button class="btn btn-info">Sign up <i class="fas fa-sign-in ml-1"></i></button>
-              </div>
-
-            </div>
+            </form>
             <!--Footer-->
             <div class="modal-footer">
-              <div class="options text-right">
-                <p class="pt-1">Already have an account? <a href="#" class="blue-text">Log In</a></p>
+              <div class="options text-center text-md-right mt-1">
+                <p>Not a member? <a href="#" class="blue-text">Sign Up</a></p>
+                <p>Forgot <a href="#" class="blue-text">Password?</a></p>
               </div>
-              <button type="button" class="btn btn-outline-info waves-effect ml-auto" (click)="frame.hide()" mdbWavesEffect >Close</button>
+              <button type="button" class="btn btn-outline-info waves-effect ml-auto" (click)="frame.hide()">Close</button>
             </div>
+
+
           </div>
           <!--/.Panel 8-->
         </div>
