--- a/src/app/modules/guide/components/bookings/bookings.component.html
+++ b/src/app/modules/guide/components/bookings/bookings.component.html
@@ -102,23 +102,35 @@
   
 
 </table> -->
-<mdb-card class="w-50">
+<mdb-card>
   <mdb-card-body>
       <mdb-card-title>
-          <mdb-badge class="float-right amy-crisp-gradient" default="true">PERSONALISED TOUR</mdb-badge>
+          <mdb-badge class="float-right amy-crisp-gradient big-badge" default="true">PERSONALISED TOUR</mdb-badge>
+          <mdb-badge class="float-right amy-crisp-gradient small-badge" default="true">P</mdb-badge>
+
           <h4>Jaipur, Rajasthan</h4>
 
       </mdb-card-title>
+      <div class="row">
 
-      <mdb-card-text>
-          <div>Guide: <a href="#!">Arjun Gupta</a></div>
-          <div>Price: Rs.500/hour</div>
-          <div>Booking Date: March 25,2020</div>
-      </mdb-card-text>
+        <mdb-card-text class="col-sm-6">
+              <div>Tourist: <a href="#!">Arjun Gupta</a></div>
+              <div>Gender: Male </div>
+              <div>Booking Date: March 25,2020</div>
+          </mdb-card-text>
+          <mdb-card-text class="col-sm-6">
+            <div>Number of people: 4</div>
+            <div>Price: Rs.500/hour</div>
+            <div>Duration: 5 days</div>
+        </mdb-card-text>
+
+      </div>
+      
 
   </mdb-card-body>
   <mdb-card-footer class="text-muted" style="height: 55px;">
       <a href="#!">View more</a>
       <button class="float-right footer-btn" style="margin: auto; " color="info" ng mdbBtn type="button" size="sm" mdbWavesEffect><b>CONTACT TOURIST</b></button>
+       <a href="..."> <i class="fas fa-phone-alt float-right"></i> </a> 
   </mdb-card-footer>
 </mdb-card>
