--- a/src/app/modules/guide/components/dashboard/dashboard.component.html
+++ b/src/app/modules/guide/components/dashboard/dashboard.component.html
@@ -14,18 +14,27 @@
 <!-- requests -->
 <div class="request-card">
 
-  <mdb-card class="w-50">
+  <mdb-card >
   <div class="container1">
       <mdb-card-body>
           <mdb-card-title>
               <h4>Jaipur, Rajasthan</h4>
           </mdb-card-title>
 
-          <mdb-card-text>
-              <div>Tourist: <a href="#!">Arjun Gupta</a></div>
-              <div>Price: Rs.500/hour</div>
-              <div>Booking Date: March 25,2020</div>
-          </mdb-card-text>
+          <div class="row">
+
+            <mdb-card-text class="col-sm-6">
+                  <div>Tourist: <a href="#!">Arjun Gupta</a></div>
+                  <div>Gender: Male </div>
+                  <div>Booking Date: March 25,2020</div>
+              </mdb-card-text>
+              <mdb-card-text class="col-sm-6">
+                <div>Number of people: 4</div>
+                <div>Price: Rs.500/hour</div>
+                <div>Duration: 5 days</div>
+            </mdb-card-text>
+    
+          </div>
 
       </mdb-card-body>
       <img src="https://cdn6.dissolve.com/p/D18_44_025/D18_44_025_0004_600.jpg" class="float-right" alt="...">
@@ -41,18 +50,27 @@
 <!-- second -->
 <div class="request-card" >
 
-  <mdb-card class="w-50">
+  <mdb-card>
   <div class="container1">
       <mdb-card-body>
           <mdb-card-title>
               <h4>Jaipur, Rajasthan</h4>
           </mdb-card-title>
+          <div class="row">
 
-          <mdb-card-text>
-              <div>Tourist: <a href="#!">Arjun Gupta</a></div>
-              <div>Price: Rs.500/hour</div>
-              <div>Booking Date: March 25,2020</div>
-          </mdb-card-text>
+            <mdb-card-text class="col-sm-6">
+                  <div>Tourist: <a href="#!">Arjun Gupta</a></div>
+                  <div>Gender: Male </div>
+                  <div>Booking Date: March 25,2020</div>
+              </mdb-card-text>
+              <mdb-card-text class="col-sm-6">
+                <div>Number of people: 4</div>
+                <div>Price: Rs.500/hour</div>
+                <div>Duration: 5 days</div>
+            </mdb-card-text>
+    
+          </div>
+          
 
       </mdb-card-body>
       <img src="https://cdn6.dissolve.com/p/D18_44_025/D18_44_025_0004_600.jpg" class="float-right" alt="...">
